--- a/Rb_Stok.rdlc
+++ b/Rb_Stok.rdlc
@@ -1164,7 +1164,6 @@
                   </Paragraph>
                 </Paragraphs>
                 <rd:DefaultName>Textbox37</rd:DefaultName>
-                <Left>0cm</Left>
                 <Height>2.26258cm</Height>
                 <Width>2.94036cm</Width>
                 <Style>
@@ -3296,7 +3295,7 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox35</rd:DefaultName>
-              <Top>0.6118cm</Top>
+              <Top>1.2468cm</Top>
               <Left>14.63079cm</Left>
               <Height>0.87711cm</Height>
               <Width>14.64184cm</Width>
@@ -3305,7 +3304,7 @@
                 <Border>
                   <Style>None</Style>
                 </Border>
-                <VerticalAlign>Middle</VerticalAlign>
+                <VerticalAlign>Bottom</VerticalAlign>
                 <PaddingLeft>2pt</PaddingLeft>
                 <PaddingRight>2pt</PaddingRight>
                 <PaddingTop>2pt</PaddingTop>
@@ -3336,7 +3335,7 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox35</rd:DefaultName>
-              <Top>1.48891cm</Top>
+              <Top>2.12391cm</Top>
               <Left>14.63079cm</Left>
               <Height>0.87711cm</Height>
               <Width>14.64184cm</Width>
